// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 [babel-ts] format 1`] = `
"'abstract' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   abstract method();
    |   ^
  3 | }
Cause: 'abstract' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #0 [typescript] format 1`] = `
"'abstract' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   abstract method();
    |   ^^^^^^^^
  3 | }
Cause: 'abstract' modifier cannot appear on a type member"
`;

exports[`snippet: #1 [babel-ts] format 1`] = `
"'abstract' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   abstract property;
    |   ^
  3 | }
Cause: 'abstract' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #1 [typescript] format 1`] = `
"'abstract' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   abstract property;
    |   ^^^^^^^^
  3 | }
Cause: 'abstract' modifier cannot appear on a type member"
`;

exports[`snippet: #2 [babel-ts] format 1`] = `
"'abstract' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   abstract [index: string]: number
    |   ^
  3 | }
Cause: 'abstract' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #2 [typescript] format 1`] = `
"'abstract' modifier cannot appear on an index signature (2:3)
  1 | interface Foo {
> 2 |   abstract [index: string]: number
    |   ^^^^^^^^
  3 | }
Cause: 'abstract' modifier cannot appear on an index signature"
`;

exports[`snippet: #3 [babel-ts] format 1`] = `
"'abstract' modifier cannot appear on a type member. (2:3)
  1 | const foo: {
> 2 |   abstract [index: string] : string
    |   ^
  3 | } = {};
Cause: 'abstract' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #3 [typescript] format 1`] = `
"'abstract' modifier cannot appear on an index signature (2:3)
  1 | const foo: {
> 2 |   abstract [index: string] : string
    |   ^^^^^^^^
  3 | } = {};
Cause: 'abstract' modifier cannot appear on an index signature"
`;

exports[`snippet: #4 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:12)
  1 | interface Foo {
> 2 |   accessor method();
    |            ^
  3 | }
Cause: Unexpected token, expected ";" (2:11)"
`;

exports[`snippet: #4 [typescript] format 1`] = `
"'accessor' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   accessor method();
    |   ^^^^^^^^
  3 | }
Cause: 'accessor' modifier cannot appear on a type member"
`;

exports[`snippet: #5 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:12)
  1 | interface Foo {
> 2 |   accessor property;
    |            ^
  3 | }
Cause: Unexpected token, expected ";" (2:11)"
`;

exports[`snippet: #5 [typescript] format 1`] = `
"'accessor' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   accessor property;
    |   ^^^^^^^^
  3 | }
Cause: 'accessor' modifier cannot appear on a type member"
`;

exports[`snippet: #6 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:12)
  1 | interface Foo {
> 2 |   accessor [index: string]: number
    |            ^
  3 | }
Cause: Unexpected token, expected ";" (2:11)"
`;

exports[`snippet: #6 [typescript] format 1`] = `
"'accessor' modifier cannot appear on an index signature (2:3)
  1 | interface Foo {
> 2 |   accessor [index: string]: number
    |   ^^^^^^^^
  3 | }
Cause: 'accessor' modifier cannot appear on an index signature"
`;

exports[`snippet: #7 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:12)
  1 | const foo: {
> 2 |   accessor [index: string] : string
    |            ^
  3 | } = {};
Cause: Unexpected token, expected ";" (2:11)"
`;

exports[`snippet: #7 [typescript] format 1`] = `
"'accessor' modifier cannot appear on an index signature (2:3)
  1 | const foo: {
> 2 |   accessor [index: string] : string
    |   ^^^^^^^^
  3 | } = {};
Cause: 'accessor' modifier cannot appear on an index signature"
`;

exports[`snippet: #8 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:9)
  1 | interface Foo {
> 2 |   async method();
    |         ^
  3 | }
Cause: Unexpected token, expected ";" (2:8)"
`;

exports[`snippet: #8 [typescript] format 1`] = `
"'async' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   async method();
    |   ^^^^^
  3 | }
Cause: 'async' modifier cannot appear on a type member"
`;

exports[`snippet: #9 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:9)
  1 | interface Foo {
> 2 |   async property;
    |         ^
  3 | }
Cause: Unexpected token, expected ";" (2:8)"
`;

exports[`snippet: #9 [typescript] format 1`] = `
"'async' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   async property;
    |   ^^^^^
  3 | }
Cause: 'async' modifier cannot appear on a type member"
`;

exports[`snippet: #10 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:9)
  1 | interface Foo {
> 2 |   async [index: string]: number
    |         ^
  3 | }
Cause: Unexpected token, expected ";" (2:8)"
`;

exports[`snippet: #10 [typescript] format 1`] = `
"'async' modifier cannot appear on an index signature (2:3)
  1 | interface Foo {
> 2 |   async [index: string]: number
    |   ^^^^^
  3 | }
Cause: 'async' modifier cannot appear on an index signature"
`;

exports[`snippet: #11 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:9)
  1 | const foo: {
> 2 |   async [index: string] : string
    |         ^
  3 | } = {};
Cause: Unexpected token, expected ";" (2:8)"
`;

exports[`snippet: #11 [typescript] format 1`] = `
"'async' modifier cannot appear on an index signature (2:3)
  1 | const foo: {
> 2 |   async [index: string] : string
    |   ^^^^^
  3 | } = {};
Cause: 'async' modifier cannot appear on an index signature"
`;

exports[`snippet: #12 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:9)
  1 | interface Foo {
> 2 |   const method();
    |         ^
  3 | }
Cause: Unexpected token, expected ";" (2:8)"
`;

exports[`snippet: #12 [typescript] format 1`] = `
"';' expected. (2:9)
  1 | interface Foo {
> 2 |   const method();
    |         ^
  3 | }
Cause: ';' expected."
`;

exports[`snippet: #13 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:9)
  1 | interface Foo {
> 2 |   const property;
    |         ^
  3 | }
Cause: Unexpected token, expected ";" (2:8)"
`;

exports[`snippet: #13 [typescript] format 1`] = `
"';' expected. (2:9)
  1 | interface Foo {
> 2 |   const property;
    |         ^
  3 | }
Cause: ';' expected."
`;

exports[`snippet: #14 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:9)
  1 | interface Foo {
> 2 |   const [index: string]: number
    |         ^
  3 | }
Cause: Unexpected token, expected ";" (2:8)"
`;

exports[`snippet: #14 [typescript] format 1`] = `
"';' expected. (2:9)
  1 | interface Foo {
> 2 |   const [index: string]: number
    |         ^
  3 | }
Cause: ';' expected."
`;

exports[`snippet: #15 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:9)
  1 | const foo: {
> 2 |   const [index: string] : string
    |         ^
  3 | } = {};
Cause: Unexpected token, expected ";" (2:8)"
`;

exports[`snippet: #15 [typescript] format 1`] = `
"';' expected. (2:9)
  1 | const foo: {
> 2 |   const [index: string] : string
    |         ^
  3 | } = {};
Cause: ';' expected."
`;

exports[`snippet: #16 [babel-ts] format 1`] = `
"'declare' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   declare method();
    |   ^
  3 | }
Cause: 'declare' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #16 [typescript] format 1`] = `
"'declare' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   declare method();
    |   ^^^^^^^
  3 | }
Cause: 'declare' modifier cannot appear on a type member"
`;

exports[`snippet: #17 [babel-ts] format 1`] = `
"'declare' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   declare property;
    |   ^
  3 | }
Cause: 'declare' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #17 [typescript] format 1`] = `
"'declare' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   declare property;
    |   ^^^^^^^
  3 | }
Cause: 'declare' modifier cannot appear on a type member"
`;

exports[`snippet: #18 [babel-ts] format 1`] = `
"'declare' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   declare [index: string]: number
    |   ^
  3 | }
Cause: 'declare' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #18 [typescript] format 1`] = `
"'declare' modifier cannot appear on an index signature (2:3)
  1 | interface Foo {
> 2 |   declare [index: string]: number
    |   ^^^^^^^
  3 | }
Cause: 'declare' modifier cannot appear on an index signature"
`;

exports[`snippet: #19 [babel-ts] format 1`] = `
"'declare' modifier cannot appear on a type member. (2:3)
  1 | const foo: {
> 2 |   declare [index: string] : string
    |   ^
  3 | } = {};
Cause: 'declare' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #19 [typescript] format 1`] = `
"'declare' modifier cannot appear on an index signature (2:3)
  1 | const foo: {
> 2 |   declare [index: string] : string
    |   ^^^^^^^
  3 | } = {};
Cause: 'declare' modifier cannot appear on an index signature"
`;

exports[`snippet: #20 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:11)
  1 | interface Foo {
> 2 |   default method();
    |           ^
  3 | }
Cause: Unexpected token, expected ";" (2:10)"
`;

exports[`snippet: #20 [typescript] format 1`] = `
"';' expected. (2:11)
  1 | interface Foo {
> 2 |   default method();
    |           ^
  3 | }
Cause: ';' expected."
`;

exports[`snippet: #21 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:11)
  1 | interface Foo {
> 2 |   default property;
    |           ^
  3 | }
Cause: Unexpected token, expected ";" (2:10)"
`;

exports[`snippet: #21 [typescript] format 1`] = `
"';' expected. (2:11)
  1 | interface Foo {
> 2 |   default property;
    |           ^
  3 | }
Cause: ';' expected."
`;

exports[`snippet: #22 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:11)
  1 | interface Foo {
> 2 |   default [index: string]: number
    |           ^
  3 | }
Cause: Unexpected token, expected ";" (2:10)"
`;

exports[`snippet: #22 [typescript] format 1`] = `
"';' expected. (2:11)
  1 | interface Foo {
> 2 |   default [index: string]: number
    |           ^
  3 | }
Cause: ';' expected."
`;

exports[`snippet: #23 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:11)
  1 | const foo: {
> 2 |   default [index: string] : string
    |           ^
  3 | } = {};
Cause: Unexpected token, expected ";" (2:10)"
`;

exports[`snippet: #23 [typescript] format 1`] = `
"';' expected. (2:11)
  1 | const foo: {
> 2 |   default [index: string] : string
    |           ^
  3 | } = {};
Cause: ';' expected."
`;

exports[`snippet: #24 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:10)
  1 | interface Foo {
> 2 |   export method();
    |          ^
  3 | }
Cause: Unexpected token, expected ";" (2:9)"
`;

exports[`snippet: #24 [typescript] format 1`] = `
"'export' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   export method();
    |   ^^^^^^
  3 | }
Cause: 'export' modifier cannot appear on a type member"
`;

exports[`snippet: #25 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:10)
  1 | interface Foo {
> 2 |   export property;
    |          ^
  3 | }
Cause: Unexpected token, expected ";" (2:9)"
`;

exports[`snippet: #25 [typescript] format 1`] = `
"'export' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   export property;
    |   ^^^^^^
  3 | }
Cause: 'export' modifier cannot appear on a type member"
`;

exports[`snippet: #26 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:10)
  1 | interface Foo {
> 2 |   export [index: string]: number
    |          ^
  3 | }
Cause: Unexpected token, expected ";" (2:9)"
`;

exports[`snippet: #26 [typescript] format 1`] = `
"'export' modifier cannot appear on an index signature (2:3)
  1 | interface Foo {
> 2 |   export [index: string]: number
    |   ^^^^^^
  3 | }
Cause: 'export' modifier cannot appear on an index signature"
`;

exports[`snippet: #27 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:10)
  1 | const foo: {
> 2 |   export [index: string] : string
    |          ^
  3 | } = {};
Cause: Unexpected token, expected ";" (2:9)"
`;

exports[`snippet: #27 [typescript] format 1`] = `
"'export' modifier cannot appear on an index signature (2:3)
  1 | const foo: {
> 2 |   export [index: string] : string
    |   ^^^^^^
  3 | } = {};
Cause: 'export' modifier cannot appear on an index signature"
`;

exports[`snippet: #28 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:6)
  1 | interface Foo {
> 2 |   in method();
    |      ^
  3 | }
Cause: Unexpected token, expected ";" (2:5)"
`;

exports[`snippet: #28 [typescript] format 1`] = `
"'in' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   in method();
    |   ^^
  3 | }
Cause: 'in' modifier cannot appear on a type member"
`;

exports[`snippet: #29 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:6)
  1 | interface Foo {
> 2 |   in property;
    |      ^
  3 | }
Cause: Unexpected token, expected ";" (2:5)"
`;

exports[`snippet: #29 [typescript] format 1`] = `
"'in' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   in property;
    |   ^^
  3 | }
Cause: 'in' modifier cannot appear on a type member"
`;

exports[`snippet: #30 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:6)
  1 | interface Foo {
> 2 |   in [index: string]: number
    |      ^
  3 | }
Cause: Unexpected token, expected ";" (2:5)"
`;

exports[`snippet: #30 [typescript] format 1`] = `
"'in' modifier cannot appear on an index signature (2:3)
  1 | interface Foo {
> 2 |   in [index: string]: number
    |   ^^
  3 | }
Cause: 'in' modifier cannot appear on an index signature"
`;

exports[`snippet: #31 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:6)
  1 | const foo: {
> 2 |   in [index: string] : string
    |      ^
  3 | } = {};
Cause: Unexpected token, expected ";" (2:5)"
`;

exports[`snippet: #31 [typescript] format 1`] = `
"'in' modifier cannot appear on an index signature (2:3)
  1 | const foo: {
> 2 |   in [index: string] : string
    |   ^^
  3 | } = {};
Cause: 'in' modifier cannot appear on an index signature"
`;

exports[`snippet: #32 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:7)
  1 | interface Foo {
> 2 |   out method();
    |       ^
  3 | }
Cause: Unexpected token, expected ";" (2:6)"
`;

exports[`snippet: #32 [typescript] format 1`] = `
"'out' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   out method();
    |   ^^^
  3 | }
Cause: 'out' modifier cannot appear on a type member"
`;

exports[`snippet: #33 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:7)
  1 | interface Foo {
> 2 |   out property;
    |       ^
  3 | }
Cause: Unexpected token, expected ";" (2:6)"
`;

exports[`snippet: #33 [typescript] format 1`] = `
"'out' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   out property;
    |   ^^^
  3 | }
Cause: 'out' modifier cannot appear on a type member"
`;

exports[`snippet: #34 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:7)
  1 | interface Foo {
> 2 |   out [index: string]: number
    |       ^
  3 | }
Cause: Unexpected token, expected ";" (2:6)"
`;

exports[`snippet: #34 [typescript] format 1`] = `
"'out' modifier cannot appear on an index signature (2:3)
  1 | interface Foo {
> 2 |   out [index: string]: number
    |   ^^^
  3 | }
Cause: 'out' modifier cannot appear on an index signature"
`;

exports[`snippet: #35 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:7)
  1 | const foo: {
> 2 |   out [index: string] : string
    |       ^
  3 | } = {};
Cause: Unexpected token, expected ";" (2:6)"
`;

exports[`snippet: #35 [typescript] format 1`] = `
"'out' modifier cannot appear on an index signature (2:3)
  1 | const foo: {
> 2 |   out [index: string] : string
    |   ^^^
  3 | } = {};
Cause: 'out' modifier cannot appear on an index signature"
`;

exports[`snippet: #36 [babel-ts] format 1`] = `
"'override' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   override method();
    |   ^
  3 | }
Cause: 'override' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #36 [typescript] format 1`] = `
"'override' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   override method();
    |   ^^^^^^^^
  3 | }
Cause: 'override' modifier cannot appear on a type member"
`;

exports[`snippet: #37 [babel-ts] format 1`] = `
"'override' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   override property;
    |   ^
  3 | }
Cause: 'override' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #37 [typescript] format 1`] = `
"'override' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   override property;
    |   ^^^^^^^^
  3 | }
Cause: 'override' modifier cannot appear on a type member"
`;

exports[`snippet: #38 [babel-ts] format 1`] = `
"'override' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   override [index: string]: number
    |   ^
  3 | }
Cause: 'override' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #38 [typescript] format 1`] = `
"'override' modifier cannot appear on an index signature (2:3)
  1 | interface Foo {
> 2 |   override [index: string]: number
    |   ^^^^^^^^
  3 | }
Cause: 'override' modifier cannot appear on an index signature"
`;

exports[`snippet: #39 [babel-ts] format 1`] = `
"'override' modifier cannot appear on a type member. (2:3)
  1 | const foo: {
> 2 |   override [index: string] : string
    |   ^
  3 | } = {};
Cause: 'override' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #39 [typescript] format 1`] = `
"'override' modifier cannot appear on an index signature (2:3)
  1 | const foo: {
> 2 |   override [index: string] : string
    |   ^^^^^^^^
  3 | } = {};
Cause: 'override' modifier cannot appear on an index signature"
`;

exports[`snippet: #40 [babel-ts] format 1`] = `
"'private' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   private method();
    |   ^
  3 | }
Cause: 'private' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #40 [typescript] format 1`] = `
"'private' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   private method();
    |   ^^^^^^^
  3 | }
Cause: 'private' modifier cannot appear on a type member"
`;

exports[`snippet: #41 [babel-ts] format 1`] = `
"'private' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   private property;
    |   ^
  3 | }
Cause: 'private' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #41 [typescript] format 1`] = `
"'private' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   private property;
    |   ^^^^^^^
  3 | }
Cause: 'private' modifier cannot appear on a type member"
`;

exports[`snippet: #42 [babel-ts] format 1`] = `
"'private' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   private [index: string]: number
    |   ^
  3 | }
Cause: 'private' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #42 [typescript] format 1`] = `
"'private' modifier cannot appear on an index signature (2:3)
  1 | interface Foo {
> 2 |   private [index: string]: number
    |   ^^^^^^^
  3 | }
Cause: 'private' modifier cannot appear on an index signature"
`;

exports[`snippet: #43 [babel-ts] format 1`] = `
"'private' modifier cannot appear on a type member. (2:3)
  1 | const foo: {
> 2 |   private [index: string] : string
    |   ^
  3 | } = {};
Cause: 'private' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #43 [typescript] format 1`] = `
"'private' modifier cannot appear on an index signature (2:3)
  1 | const foo: {
> 2 |   private [index: string] : string
    |   ^^^^^^^
  3 | } = {};
Cause: 'private' modifier cannot appear on an index signature"
`;

exports[`snippet: #44 [babel-ts] format 1`] = `
"'protected' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   protected method();
    |   ^
  3 | }
Cause: 'protected' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #44 [typescript] format 1`] = `
"'protected' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   protected method();
    |   ^^^^^^^^^
  3 | }
Cause: 'protected' modifier cannot appear on a type member"
`;

exports[`snippet: #45 [babel-ts] format 1`] = `
"'protected' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   protected property;
    |   ^
  3 | }
Cause: 'protected' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #45 [typescript] format 1`] = `
"'protected' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   protected property;
    |   ^^^^^^^^^
  3 | }
Cause: 'protected' modifier cannot appear on a type member"
`;

exports[`snippet: #46 [babel-ts] format 1`] = `
"'protected' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   protected [index: string]: number
    |   ^
  3 | }
Cause: 'protected' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #46 [typescript] format 1`] = `
"'protected' modifier cannot appear on an index signature (2:3)
  1 | interface Foo {
> 2 |   protected [index: string]: number
    |   ^^^^^^^^^
  3 | }
Cause: 'protected' modifier cannot appear on an index signature"
`;

exports[`snippet: #47 [babel-ts] format 1`] = `
"'protected' modifier cannot appear on a type member. (2:3)
  1 | const foo: {
> 2 |   protected [index: string] : string
    |   ^
  3 | } = {};
Cause: 'protected' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #47 [typescript] format 1`] = `
"'protected' modifier cannot appear on an index signature (2:3)
  1 | const foo: {
> 2 |   protected [index: string] : string
    |   ^^^^^^^^^
  3 | } = {};
Cause: 'protected' modifier cannot appear on an index signature"
`;

exports[`snippet: #48 [babel-ts] format 1`] = `
"'public' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   public method();
    |   ^
  3 | }
Cause: 'public' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #48 [typescript] format 1`] = `
"'public' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   public method();
    |   ^^^^^^
  3 | }
Cause: 'public' modifier cannot appear on a type member"
`;

exports[`snippet: #49 [babel-ts] format 1`] = `
"'public' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   public property;
    |   ^
  3 | }
Cause: 'public' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #49 [typescript] format 1`] = `
"'public' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   public property;
    |   ^^^^^^
  3 | }
Cause: 'public' modifier cannot appear on a type member"
`;

exports[`snippet: #50 [babel-ts] format 1`] = `
"'public' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   public [index: string]: number
    |   ^
  3 | }
Cause: 'public' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #50 [typescript] format 1`] = `
"'public' modifier cannot appear on an index signature (2:3)
  1 | interface Foo {
> 2 |   public [index: string]: number
    |   ^^^^^^
  3 | }
Cause: 'public' modifier cannot appear on an index signature"
`;

exports[`snippet: #51 [babel-ts] format 1`] = `
"'public' modifier cannot appear on a type member. (2:3)
  1 | const foo: {
> 2 |   public [index: string] : string
    |   ^
  3 | } = {};
Cause: 'public' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #51 [typescript] format 1`] = `
"'public' modifier cannot appear on an index signature (2:3)
  1 | const foo: {
> 2 |   public [index: string] : string
    |   ^^^^^^
  3 | } = {};
Cause: 'public' modifier cannot appear on an index signature"
`;

exports[`snippet: #52 [babel-ts] format 1`] = `
"'static' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   static method();
    |   ^
  3 | }
Cause: 'static' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #52 [typescript] format 1`] = `
"'static' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   static method();
    |   ^^^^^^
  3 | }
Cause: 'static' modifier cannot appear on a type member"
`;

exports[`snippet: #53 [babel-ts] format 1`] = `
"'static' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   static property;
    |   ^
  3 | }
Cause: 'static' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #53 [typescript] format 1`] = `
"'static' modifier cannot appear on a type member (2:3)
  1 | interface Foo {
> 2 |   static property;
    |   ^^^^^^
  3 | }
Cause: 'static' modifier cannot appear on a type member"
`;

exports[`snippet: #54 [babel-ts] format 1`] = `
"'static' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   static [index: string]: number
    |   ^
  3 | }
Cause: 'static' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #54 [typescript] format 1`] = `
"'static' modifier cannot appear on an index signature (2:3)
  1 | interface Foo {
> 2 |   static [index: string]: number
    |   ^^^^^^
  3 | }
Cause: 'static' modifier cannot appear on an index signature"
`;

exports[`snippet: #55 [babel-ts] format 1`] = `
"'static' modifier cannot appear on a type member. (2:3)
  1 | const foo: {
> 2 |   static [index: string] : string
    |   ^
  3 | } = {};
Cause: 'static' modifier cannot appear on a type member. (2:2)"
`;

exports[`snippet: #55 [typescript] format 1`] = `
"'static' modifier cannot appear on an index signature (2:3)
  1 | const foo: {
> 2 |   static [index: string] : string
    |   ^^^^^^
  3 | } = {};
Cause: 'static' modifier cannot appear on an index signature"
`;

exports[`snippet: #56 [babel-ts] format 1`] = `
"'readonly' modifier can only appear on a property declaration or index signature. (2:3)
  1 | interface Foo {
> 2 |   readonly method();
    |   ^
  3 | }
Cause: 'readonly' modifier can only appear on a property declaration or index signature. (2:2)"
`;

exports[`snippet: #56 [typescript] format 1`] = `
"'readonly' modifier can only appear on a property declaration or index signature. (2:3)
  1 | interface Foo {
> 2 |   readonly method();
    |   ^^^^^^^^
  3 | }
Cause: 'readonly' modifier can only appear on a property declaration or index signature."
`;

exports[`snippet: #57 [babel-ts] format 1`] = `
"'abstract' modifier can only appear on a class, method, or property declaration. (1:1)
> 1 | abstract interface Foo {}
    | ^
Cause: 'abstract' modifier can only appear on a class, method, or property declaration. (1:0)"
`;

exports[`snippet: #57 [typescript] format 1`] = `
"'abstract' modifier can only appear on a class, method, or property declaration. (1:1)
> 1 | abstract interface Foo {}
    | ^^^^^^^^
Cause: 'abstract' modifier can only appear on a class, method, or property declaration."
`;

exports[`snippet: #58 [babel-ts] format 1`] = `
"Missing semicolon. (1:9)
> 1 | accessor interface Foo {}
    |         ^
Cause: Missing semicolon. (1:8)"
`;

exports[`snippet: #58 [typescript] format 1`] = `
"'accessor' modifier can only appear on a property declaration. (1:1)
> 1 | accessor interface Foo {}
    | ^^^^^^^^
Cause: 'accessor' modifier can only appear on a property declaration."
`;

exports[`snippet: #59 [babel-ts] format 1`] = `
"Missing semicolon. (1:6)
> 1 | async interface Foo {}
    |      ^
Cause: Missing semicolon. (1:5)"
`;

exports[`snippet: #59 [typescript] format 1`] = `
"'async' modifier cannot be used here. (1:1)
> 1 | async interface Foo {}
    | ^^^^^
Cause: 'async' modifier cannot be used here."
`;

exports[`snippet: #60 [babel-ts] format 1`] = `
"Missing initializer in const declaration. (1:16)
> 1 | const interface Foo {}
    |                ^
Cause: Missing initializer in const declaration. (1:15)"
`;

exports[`snippet: #60 [typescript] format 1`] = `
"',' expected. (1:17)
> 1 | const interface Foo {}
    |                 ^
Cause: ',' expected."
`;

exports[`snippet: #61 [babel-ts] format 1`] = `
"Unexpected token (1:1)
> 1 | default interface Foo {}
    | ^
Cause: Unexpected token (1:0)"
`;

exports[`snippet: #61 [typescript] format 1`] = `
"'export' expected. (1:1)
> 1 | default interface Foo {}
    | ^
Cause: 'export' expected."
`;

exports[`snippet: #62 [babel-ts] format 1`] = `
"Unexpected token (1:1)
> 1 | in interface Foo {}
    | ^
Cause: Unexpected token (1:0)"
`;

exports[`snippet: #62 [typescript] format 1`] = `
"Expression expected. (1:1)
> 1 | in interface Foo {}
    | ^
Cause: Expression expected."
`;

exports[`snippet: #63 [babel-ts] format 1`] = `
"Missing semicolon. (1:4)
> 1 | out interface Foo {}
    |    ^
Cause: Missing semicolon. (1:3)"
`;

exports[`snippet: #63 [typescript] format 1`] = `
"Unexpected keyword or identifier. (1:1)
> 1 | out interface Foo {}
    | ^
Cause: Unexpected keyword or identifier."
`;

exports[`snippet: #64 [babel-ts] format 1`] = `
"Missing semicolon. (1:9)
> 1 | override interface Foo {}
    |         ^
Cause: Missing semicolon. (1:8)"
`;

exports[`snippet: #64 [typescript] format 1`] = `
"Unexpected keyword or identifier. (1:1)
> 1 | override interface Foo {}
    | ^
Cause: Unexpected keyword or identifier."
`;

exports[`snippet: #65 [babel-ts] format 1`] = `
"Missing semicolon. (1:8)
> 1 | private interface Foo {}
    |        ^
Cause: Missing semicolon. (1:7)"
`;

exports[`snippet: #65 [typescript] format 1`] = `
"'private' modifier cannot appear on a module or namespace element. (1:1)
> 1 | private interface Foo {}
    | ^^^^^^^
Cause: 'private' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #66 [babel-ts] format 1`] = `
"Missing semicolon. (1:10)
> 1 | protected interface Foo {}
    |          ^
Cause: Missing semicolon. (1:9)"
`;

exports[`snippet: #66 [typescript] format 1`] = `
"'protected' modifier cannot appear on a module or namespace element. (1:1)
> 1 | protected interface Foo {}
    | ^^^^^^^^^
Cause: 'protected' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #67 [babel-ts] format 1`] = `
"Missing semicolon. (1:7)
> 1 | public interface Foo {}
    |       ^
Cause: Missing semicolon. (1:6)"
`;

exports[`snippet: #67 [typescript] format 1`] = `
"'public' modifier cannot appear on a module or namespace element. (1:1)
> 1 | public interface Foo {}
    | ^^^^^^
Cause: 'public' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #68 [babel-ts] format 1`] = `
"Missing semicolon. (1:9)
> 1 | readonly interface Foo {}
    |         ^
Cause: Missing semicolon. (1:8)"
`;

exports[`snippet: #68 [typescript] format 1`] = `
"'readonly' modifier can only appear on a property declaration or index signature. (1:1)
> 1 | readonly interface Foo {}
    | ^^^^^^^^
Cause: 'readonly' modifier can only appear on a property declaration or index signature."
`;

exports[`snippet: #69 [babel-ts] format 1`] = `
"Missing semicolon. (1:7)
> 1 | static interface Foo {}
    |       ^
Cause: Missing semicolon. (1:6)"
`;

exports[`snippet: #69 [typescript] format 1`] = `
"'static' modifier cannot appear on a module or namespace element. (1:1)
> 1 | static interface Foo {}
    | ^^^^^^
Cause: 'static' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #70 [babel-ts] format 1`] = `
"'abstract' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<abstract T> {}
    |               ^
Cause: 'abstract' modifier cannot appear on a type parameter. (1:14)"
`;

exports[`snippet: #70 [typescript] format 1`] = `
"'abstract' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<abstract T> {}
    |               ^^^^^^^^
Cause: 'abstract' modifier cannot appear on a type parameter"
`;

exports[`snippet: #71 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:24)
> 1 | interface Foo<accessor T> {}
    |                        ^
Cause: Unexpected token, expected "," (1:23)"
`;

exports[`snippet: #71 [typescript] format 1`] = `
"'accessor' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<accessor T> {}
    |               ^^^^^^^^
Cause: 'accessor' modifier cannot appear on a type parameter"
`;

exports[`snippet: #72 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:21)
> 1 | interface Foo<async T> {}
    |                     ^
Cause: Unexpected token, expected "," (1:20)"
`;

exports[`snippet: #72 [typescript] format 1`] = `
"'async' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<async T> {}
    |               ^^^^^
Cause: 'async' modifier cannot appear on a type parameter"
`;

exports[`snippet: #73 [babel-ts] format 1`] = `
"'declare' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<declare T> {}
    |               ^
Cause: 'declare' modifier cannot appear on a type parameter. (1:14)"
`;

exports[`snippet: #73 [typescript] format 1`] = `
"'declare' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<declare T> {}
    |               ^^^^^^^
Cause: 'declare' modifier cannot appear on a type parameter"
`;

exports[`snippet: #74 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:23)
> 1 | interface Foo<default T> {}
    |                       ^
Cause: Unexpected token, expected "," (1:22)"
`;

exports[`snippet: #74 [typescript] format 1`] = `
"Type parameter declaration expected. (1:15)
> 1 | interface Foo<default T> {}
    |               ^
Cause: Type parameter declaration expected."
`;

exports[`snippet: #75 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:22)
> 1 | interface Foo<export T> {}
    |                      ^
Cause: Unexpected token, expected "," (1:21)"
`;

exports[`snippet: #75 [typescript] format 1`] = `
"Type parameter declaration expected. (1:15)
> 1 | interface Foo<export T> {}
    |               ^
Cause: Type parameter declaration expected."
`;

exports[`snippet: #76 [babel-ts] format 1`] = `
"'override' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<override T> {}
    |               ^
Cause: 'override' modifier cannot appear on a type parameter. (1:14)"
`;

exports[`snippet: #76 [typescript] format 1`] = `
"'override' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<override T> {}
    |               ^^^^^^^^
Cause: 'override' modifier cannot appear on a type parameter"
`;

exports[`snippet: #77 [babel-ts] format 1`] = `
"'private' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<private T> {}
    |               ^
Cause: 'private' modifier cannot appear on a type parameter. (1:14)"
`;

exports[`snippet: #77 [typescript] format 1`] = `
"'private' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<private T> {}
    |               ^^^^^^^
Cause: 'private' modifier cannot appear on a type parameter"
`;

exports[`snippet: #78 [babel-ts] format 1`] = `
"'protected' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<protected T> {}
    |               ^
Cause: 'protected' modifier cannot appear on a type parameter. (1:14)"
`;

exports[`snippet: #78 [typescript] format 1`] = `
"'protected' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<protected T> {}
    |               ^^^^^^^^^
Cause: 'protected' modifier cannot appear on a type parameter"
`;

exports[`snippet: #79 [babel-ts] format 1`] = `
"'public' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<public T> {}
    |               ^
Cause: 'public' modifier cannot appear on a type parameter. (1:14)"
`;

exports[`snippet: #79 [typescript] format 1`] = `
"'public' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<public T> {}
    |               ^^^^^^
Cause: 'public' modifier cannot appear on a type parameter"
`;

exports[`snippet: #80 [babel-ts] format 1`] = `
"'readonly' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<readonly T> {}
    |               ^
Cause: 'readonly' modifier cannot appear on a type parameter. (1:14)"
`;

exports[`snippet: #80 [typescript] format 1`] = `
"'readonly' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<readonly T> {}
    |               ^^^^^^^^
Cause: 'readonly' modifier cannot appear on a type parameter"
`;

exports[`snippet: #81 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:22)
> 1 | interface Foo<static T> {}
    |                      ^
Cause: Unexpected token, expected "," (1:21)"
`;

exports[`snippet: #81 [typescript] format 1`] = `
"'static' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<static T> {}
    |               ^^^^^^
Cause: 'static' modifier cannot appear on a type parameter"
`;

exports[`snippet: #82 [babel-ts] format 1`] = `
"Class methods cannot have the 'declare' modifier. (2:3)
  1 | class Foo {
> 2 |   declare method() {}
    |   ^
  3 | }
Cause: Class methods cannot have the 'declare' modifier. (2:2)"
`;

exports[`snippet: #82 [typescript] format 1`] = `
"'declare' modifier cannot appear on class elements of this kind. (2:3)
  1 | class Foo {
> 2 |   declare method() {}
    |   ^^^^^^^
  3 | }
Cause: 'declare' modifier cannot appear on class elements of this kind."
`;

exports[`snippet: #83 [babel-ts] format 1`] = `
"Class methods cannot have the 'readonly' modifier. (2:3)
  1 | class Foo {
> 2 |   readonly method() {}
    |   ^
  3 | }
Cause: Class methods cannot have the 'readonly' modifier. (2:2)"
`;

exports[`snippet: #83 [typescript] format 1`] = `
"'readonly' modifier can only appear on a property declaration or index signature. (2:3)
  1 | class Foo {
> 2 |   readonly method() {}
    |   ^^^^^^^^
  3 | }
Cause: 'readonly' modifier can only appear on a property declaration or index signature."
`;

exports[`snippet: #84 [babel-ts] format 1`] = `
"'declare' is not allowed in getters. (2:3)
  1 | class Foo {
> 2 |   declare get getter() {}
    |   ^
  3 | }
Cause: 'declare' is not allowed in getters. (2:2)"
`;

exports[`snippet: #84 [typescript] format 1`] = `
"'declare' modifier cannot appear on class elements of this kind. (2:3)
  1 | class Foo {
> 2 |   declare get getter() {}
    |   ^^^^^^^
  3 | }
Cause: 'declare' modifier cannot appear on class elements of this kind."
`;

exports[`snippet: #85 [babel-ts] format 1`] = `
"'declare' is not allowed in setters. (2:3)
  1 | class Foo {
> 2 |   declare set setter(v) {}
    |   ^
  3 | }
Cause: 'declare' is not allowed in setters. (2:2)"
`;

exports[`snippet: #85 [typescript] format 1`] = `
"'declare' modifier cannot appear on class elements of this kind. (2:3)
  1 | class Foo {
> 2 |   declare set setter(v) {}
    |   ^^^^^^^
  3 | }
Cause: 'declare' modifier cannot appear on class elements of this kind."
`;

exports[`snippet: #86 [babel-ts] format 1`] = `
"Unexpected token, expected "class" (1:10)
> 1 | abstract module Foo {}
    |          ^
Cause: Unexpected token, expected "class" (1:9)"
`;

exports[`snippet: #86 [typescript] format 1`] = `
"'abstract' modifier can only appear on a class, method, or property declaration. (1:1)
> 1 | abstract module Foo {}
    | ^^^^^^^^
Cause: 'abstract' modifier can only appear on a class, method, or property declaration."
`;

exports[`snippet: #87 [babel-ts] format 1`] = `
"Unexpected token, expected "class" (1:10)
> 1 | abstract namespace Foo {}
    |          ^
Cause: Unexpected token, expected "class" (1:9)"
`;

exports[`snippet: #87 [typescript] format 1`] = `
"'abstract' modifier can only appear on a class, method, or property declaration. (1:1)
> 1 | abstract namespace Foo {}
    | ^^^^^^^^
Cause: 'abstract' modifier can only appear on a class, method, or property declaration."
`;

exports[`snippet: #88 [babel-ts] format 1`] = `
"Missing semicolon. (1:9)
> 1 | accessor module Foo {}
    |         ^
Cause: Missing semicolon. (1:8)"
`;

exports[`snippet: #88 [typescript] format 1`] = `
"'accessor' modifier can only appear on a property declaration. (1:1)
> 1 | accessor module Foo {}
    | ^^^^^^^^
Cause: 'accessor' modifier can only appear on a property declaration."
`;

exports[`snippet: #89 [babel-ts] format 1`] = `
"Missing semicolon. (1:9)
> 1 | accessor namespace Foo {}
    |         ^
Cause: Missing semicolon. (1:8)"
`;

exports[`snippet: #89 [typescript] format 1`] = `
"'accessor' modifier can only appear on a property declaration. (1:1)
> 1 | accessor namespace Foo {}
    | ^^^^^^^^
Cause: 'accessor' modifier can only appear on a property declaration."
`;

exports[`snippet: #90 [babel-ts] format 1`] = `
"Missing semicolon. (1:6)
> 1 | async module Foo {}
    |      ^
Cause: Missing semicolon. (1:5)"
`;

exports[`snippet: #90 [typescript] format 1`] = `
"'async' modifier cannot be used here. (1:1)
> 1 | async module Foo {}
    | ^^^^^
Cause: 'async' modifier cannot be used here."
`;

exports[`snippet: #91 [babel-ts] format 1`] = `
"Missing semicolon. (1:6)
> 1 | async namespace Foo {}
    |      ^
Cause: Missing semicolon. (1:5)"
`;

exports[`snippet: #91 [typescript] format 1`] = `
"'async' modifier cannot be used here. (1:1)
> 1 | async namespace Foo {}
    | ^^^^^
Cause: 'async' modifier cannot be used here."
`;

exports[`snippet: #92 [babel-ts] format 1`] = `
"Missing initializer in const declaration. (1:13)
> 1 | const module Foo {}
    |             ^
Cause: Missing initializer in const declaration. (1:12)"
`;

exports[`snippet: #92 [typescript] format 1`] = `
"',' expected. (1:14)
> 1 | const module Foo {}
    |              ^
Cause: ',' expected."
`;

exports[`snippet: #93 [babel-ts] format 1`] = `
"Missing initializer in const declaration. (1:16)
> 1 | const namespace Foo {}
    |                ^
Cause: Missing initializer in const declaration. (1:15)"
`;

exports[`snippet: #93 [typescript] format 1`] = `
"',' expected. (1:17)
> 1 | const namespace Foo {}
    |                 ^
Cause: ',' expected."
`;

exports[`snippet: #94 [babel-ts] format 1`] = `
"Unexpected token (1:1)
> 1 | default module Foo {}
    | ^
Cause: Unexpected token (1:0)"
`;

exports[`snippet: #94 [typescript] format 1`] = `
"'export' expected. (1:1)
> 1 | default module Foo {}
    | ^
Cause: 'export' expected."
`;

exports[`snippet: #95 [babel-ts] format 1`] = `
"Unexpected token (1:1)
> 1 | default namespace Foo {}
    | ^
Cause: Unexpected token (1:0)"
`;

exports[`snippet: #95 [typescript] format 1`] = `
"'export' expected. (1:1)
> 1 | default namespace Foo {}
    | ^
Cause: 'export' expected."
`;

exports[`snippet: #96 [babel-ts] format 1`] = `
"Unexpected token (1:1)
> 1 | in module Foo {}
    | ^
Cause: Unexpected token (1:0)"
`;

exports[`snippet: #96 [typescript] format 1`] = `
"Expression expected. (1:1)
> 1 | in module Foo {}
    | ^
Cause: Expression expected."
`;

exports[`snippet: #97 [babel-ts] format 1`] = `
"Unexpected token (1:1)
> 1 | in namespace Foo {}
    | ^
Cause: Unexpected token (1:0)"
`;

exports[`snippet: #97 [typescript] format 1`] = `
"Expression expected. (1:1)
> 1 | in namespace Foo {}
    | ^
Cause: Expression expected."
`;

exports[`snippet: #98 [babel-ts] format 1`] = `
"Missing semicolon. (1:4)
> 1 | out module Foo {}
    |    ^
Cause: Missing semicolon. (1:3)"
`;

exports[`snippet: #98 [typescript] format 1`] = `
"Unexpected keyword or identifier. (1:1)
> 1 | out module Foo {}
    | ^
Cause: Unexpected keyword or identifier."
`;

exports[`snippet: #99 [babel-ts] format 1`] = `
"Missing semicolon. (1:4)
> 1 | out namespace Foo {}
    |    ^
Cause: Missing semicolon. (1:3)"
`;

exports[`snippet: #99 [typescript] format 1`] = `
"Unexpected keyword or identifier. (1:1)
> 1 | out namespace Foo {}
    | ^
Cause: Unexpected keyword or identifier."
`;

exports[`snippet: #100 [babel-ts] format 1`] = `
"Missing semicolon. (1:9)
> 1 | override module Foo {}
    |         ^
Cause: Missing semicolon. (1:8)"
`;

exports[`snippet: #100 [typescript] format 1`] = `
"Unexpected keyword or identifier. (1:1)
> 1 | override module Foo {}
    | ^
Cause: Unexpected keyword or identifier."
`;

exports[`snippet: #101 [babel-ts] format 1`] = `
"Missing semicolon. (1:9)
> 1 | override namespace Foo {}
    |         ^
Cause: Missing semicolon. (1:8)"
`;

exports[`snippet: #101 [typescript] format 1`] = `
"Unexpected keyword or identifier. (1:1)
> 1 | override namespace Foo {}
    | ^
Cause: Unexpected keyword or identifier."
`;

exports[`snippet: #102 [babel-ts] format 1`] = `
"Missing semicolon. (1:8)
> 1 | private module Foo {}
    |        ^
Cause: Missing semicolon. (1:7)"
`;

exports[`snippet: #102 [typescript] format 1`] = `
"'private' modifier cannot appear on a module or namespace element. (1:1)
> 1 | private module Foo {}
    | ^^^^^^^
Cause: 'private' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #103 [babel-ts] format 1`] = `
"Missing semicolon. (1:8)
> 1 | private namespace Foo {}
    |        ^
Cause: Missing semicolon. (1:7)"
`;

exports[`snippet: #103 [typescript] format 1`] = `
"'private' modifier cannot appear on a module or namespace element. (1:1)
> 1 | private namespace Foo {}
    | ^^^^^^^
Cause: 'private' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #104 [babel-ts] format 1`] = `
"Missing semicolon. (1:10)
> 1 | protected module Foo {}
    |          ^
Cause: Missing semicolon. (1:9)"
`;

exports[`snippet: #104 [typescript] format 1`] = `
"'protected' modifier cannot appear on a module or namespace element. (1:1)
> 1 | protected module Foo {}
    | ^^^^^^^^^
Cause: 'protected' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #105 [babel-ts] format 1`] = `
"Missing semicolon. (1:10)
> 1 | protected namespace Foo {}
    |          ^
Cause: Missing semicolon. (1:9)"
`;

exports[`snippet: #105 [typescript] format 1`] = `
"'protected' modifier cannot appear on a module or namespace element. (1:1)
> 1 | protected namespace Foo {}
    | ^^^^^^^^^
Cause: 'protected' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #106 [babel-ts] format 1`] = `
"Missing semicolon. (1:7)
> 1 | public module Foo {}
    |       ^
Cause: Missing semicolon. (1:6)"
`;

exports[`snippet: #106 [typescript] format 1`] = `
"'public' modifier cannot appear on a module or namespace element. (1:1)
> 1 | public module Foo {}
    | ^^^^^^
Cause: 'public' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #107 [babel-ts] format 1`] = `
"Missing semicolon. (1:7)
> 1 | public namespace Foo {}
    |       ^
Cause: Missing semicolon. (1:6)"
`;

exports[`snippet: #107 [typescript] format 1`] = `
"'public' modifier cannot appear on a module or namespace element. (1:1)
> 1 | public namespace Foo {}
    | ^^^^^^
Cause: 'public' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #108 [babel-ts] format 1`] = `
"Missing semicolon. (1:9)
> 1 | readonly module Foo {}
    |         ^
Cause: Missing semicolon. (1:8)"
`;

exports[`snippet: #108 [typescript] format 1`] = `
"'readonly' modifier can only appear on a property declaration or index signature. (1:1)
> 1 | readonly module Foo {}
    | ^^^^^^^^
Cause: 'readonly' modifier can only appear on a property declaration or index signature."
`;

exports[`snippet: #109 [babel-ts] format 1`] = `
"Missing semicolon. (1:9)
> 1 | readonly namespace Foo {}
    |         ^
Cause: Missing semicolon. (1:8)"
`;

exports[`snippet: #109 [typescript] format 1`] = `
"'readonly' modifier can only appear on a property declaration or index signature. (1:1)
> 1 | readonly namespace Foo {}
    | ^^^^^^^^
Cause: 'readonly' modifier can only appear on a property declaration or index signature."
`;

exports[`snippet: #110 [babel-ts] format 1`] = `
"Missing semicolon. (1:7)
> 1 | static module Foo {}
    |       ^
Cause: Missing semicolon. (1:6)"
`;

exports[`snippet: #110 [typescript] format 1`] = `
"'static' modifier cannot appear on a module or namespace element. (1:1)
> 1 | static module Foo {}
    | ^^^^^^
Cause: 'static' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #111 [babel-ts] format 1`] = `
"Missing semicolon. (1:7)
> 1 | static namespace Foo {}
    |       ^
Cause: Missing semicolon. (1:6)"
`;

exports[`snippet: #111 [typescript] format 1`] = `
"'static' modifier cannot appear on a module or namespace element. (1:1)
> 1 | static namespace Foo {}
    | ^^^^^^
Cause: 'static' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #112 [babel-ts] format 1`] = `
"Unexpected token, expected "class" (1:10)
> 1 | abstract enum Foo {}
    |          ^
Cause: Unexpected token, expected "class" (1:9)"
`;

exports[`snippet: #112 [typescript] format 1`] = `
"'abstract' modifier can only appear on a class, method, or property declaration. (1:1)
> 1 | abstract enum Foo {}
    | ^^^^^^^^
Cause: 'abstract' modifier can only appear on a class, method, or property declaration."
`;

exports[`snippet: #113 [babel-ts] format 1`] = `
"Missing semicolon. (1:9)
> 1 | accessor enum Foo {}
    |         ^
Cause: Missing semicolon. (1:8)"
`;

exports[`snippet: #113 [typescript] format 1`] = `
"'accessor' modifier can only appear on a property declaration. (1:1)
> 1 | accessor enum Foo {}
    | ^^^^^^^^
Cause: 'accessor' modifier can only appear on a property declaration."
`;

exports[`snippet: #114 [babel-ts] format 1`] = `
"Missing semicolon. (1:6)
> 1 | async enum Foo {}
    |      ^
Cause: Missing semicolon. (1:5)"
`;

exports[`snippet: #114 [typescript] format 1`] = `
"'async' modifier cannot be used here. (1:1)
> 1 | async enum Foo {}
    | ^^^^^
Cause: 'async' modifier cannot be used here."
`;

exports[`snippet: #115 [babel-ts] format 1`] = `
"Unexpected token (1:1)
> 1 | default enum Foo {}
    | ^
Cause: Unexpected token (1:0)"
`;

exports[`snippet: #115 [typescript] format 1`] = `
"'export' expected. (1:1)
> 1 | default enum Foo {}
    | ^
Cause: 'export' expected."
`;

exports[`snippet: #116 [babel-ts] format 1`] = `
"Unexpected token (1:1)
> 1 | in enum Foo {}
    | ^
Cause: Unexpected token (1:0)"
`;

exports[`snippet: #116 [typescript] format 1`] = `
"Expression expected. (1:1)
> 1 | in enum Foo {}
    | ^
Cause: Expression expected."
`;

exports[`snippet: #117 [babel-ts] format 1`] = `
"Missing semicolon. (1:4)
> 1 | out enum Foo {}
    |    ^
Cause: Missing semicolon. (1:3)"
`;

exports[`snippet: #117 [typescript] format 1`] = `
"Unexpected keyword or identifier. (1:1)
> 1 | out enum Foo {}
    | ^
Cause: Unexpected keyword or identifier."
`;

exports[`snippet: #118 [babel-ts] format 1`] = `
"Missing semicolon. (1:9)
> 1 | override enum Foo {}
    |         ^
Cause: Missing semicolon. (1:8)"
`;

exports[`snippet: #118 [typescript] format 1`] = `
"Unexpected keyword or identifier. (1:1)
> 1 | override enum Foo {}
    | ^
Cause: Unexpected keyword or identifier."
`;

exports[`snippet: #119 [babel-ts] format 1`] = `
"Missing semicolon. (1:8)
> 1 | private enum Foo {}
    |        ^
Cause: Missing semicolon. (1:7)"
`;

exports[`snippet: #119 [typescript] format 1`] = `
"'private' modifier cannot appear on a module or namespace element. (1:1)
> 1 | private enum Foo {}
    | ^^^^^^^
Cause: 'private' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #120 [babel-ts] format 1`] = `
"Missing semicolon. (1:10)
> 1 | protected enum Foo {}
    |          ^
Cause: Missing semicolon. (1:9)"
`;

exports[`snippet: #120 [typescript] format 1`] = `
"'protected' modifier cannot appear on a module or namespace element. (1:1)
> 1 | protected enum Foo {}
    | ^^^^^^^^^
Cause: 'protected' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #121 [babel-ts] format 1`] = `
"Missing semicolon. (1:7)
> 1 | public enum Foo {}
    |       ^
Cause: Missing semicolon. (1:6)"
`;

exports[`snippet: #121 [typescript] format 1`] = `
"'public' modifier cannot appear on a module or namespace element. (1:1)
> 1 | public enum Foo {}
    | ^^^^^^
Cause: 'public' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #122 [babel-ts] format 1`] = `
"Missing semicolon. (1:9)
> 1 | readonly enum Foo {}
    |         ^
Cause: Missing semicolon. (1:8)"
`;

exports[`snippet: #122 [typescript] format 1`] = `
"'readonly' modifier can only appear on a property declaration or index signature. (1:1)
> 1 | readonly enum Foo {}
    | ^^^^^^^^
Cause: 'readonly' modifier can only appear on a property declaration or index signature."
`;

exports[`snippet: #123 [babel-ts] format 1`] = `
"Missing semicolon. (1:7)
> 1 | static enum Foo {}
    |       ^
Cause: Missing semicolon. (1:6)"
`;

exports[`snippet: #123 [typescript] format 1`] = `
"'static' modifier cannot appear on a module or namespace element. (1:1)
> 1 | static enum Foo {}
    | ^^^^^^
Cause: 'static' modifier cannot appear on a module or namespace element."
`;

exports[`snippet: #124 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:23)
> 1 | function foo(abstract parameter) {}
    |                       ^
Cause: Unexpected token, expected "," (1:22)"
`;

exports[`snippet: #124 [typescript] format 1`] = `
"'abstract' modifier can only appear on a class, method, or property declaration. (1:14)
> 1 | function foo(abstract parameter) {}
    |              ^^^^^^^^
Cause: 'abstract' modifier can only appear on a class, method, or property declaration."
`;

exports[`snippet: #125 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:29)
> 1 | class Foo { method(abstract parameter) {} }
    |                             ^
Cause: Unexpected token, expected "," (1:28)"
`;

exports[`snippet: #125 [typescript] format 1`] = `
"'abstract' modifier can only appear on a class, method, or property declaration. (1:20)
> 1 | class Foo { method(abstract parameter) {} }
    |                    ^^^^^^^^
Cause: 'abstract' modifier can only appear on a class, method, or property declaration."
`;

exports[`snippet: #126 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:23)
> 1 | function foo(accessor parameter) {}
    |                       ^
Cause: Unexpected token, expected "," (1:22)"
`;

exports[`snippet: #126 [typescript] format 1`] = `
"'accessor' modifier can only appear on a property declaration. (1:14)
> 1 | function foo(accessor parameter) {}
    |              ^^^^^^^^
Cause: 'accessor' modifier can only appear on a property declaration."
`;

exports[`snippet: #127 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:29)
> 1 | class Foo { method(accessor parameter) {} }
    |                             ^
Cause: Unexpected token, expected "," (1:28)"
`;

exports[`snippet: #127 [typescript] format 1`] = `
"'accessor' modifier can only appear on a property declaration. (1:20)
> 1 | class Foo { method(accessor parameter) {} }
    |                    ^^^^^^^^
Cause: 'accessor' modifier can only appear on a property declaration."
`;

exports[`snippet: #128 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:20)
> 1 | function foo(async parameter) {}
    |                    ^
Cause: Unexpected token, expected "," (1:19)"
`;

exports[`snippet: #128 [typescript] format 1`] = `
"'async' modifier cannot be used here. (1:14)
> 1 | function foo(async parameter) {}
    |              ^^^^^
Cause: 'async' modifier cannot be used here."
`;

exports[`snippet: #129 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:26)
> 1 | class Foo { method(async parameter) {} }
    |                          ^
Cause: Unexpected token, expected "," (1:25)"
`;

exports[`snippet: #129 [typescript] format 1`] = `
"'async' modifier cannot be used here. (1:20)
> 1 | class Foo { method(async parameter) {} }
    |                    ^^^^^
Cause: 'async' modifier cannot be used here."
`;

exports[`snippet: #130 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:20)
> 1 | function foo(const parameter) {}
    |                    ^
Cause: Unexpected token, expected "," (1:19)"
`;

exports[`snippet: #130 [typescript] format 1`] = `
"Identifier expected. 'const' is a reserved word that cannot be used here. (1:14)
> 1 | function foo(const parameter) {}
    |              ^
Cause: Identifier expected. 'const' is a reserved word that cannot be used here."
`;

exports[`snippet: #131 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:26)
> 1 | class Foo { method(const parameter) {} }
    |                          ^
Cause: Unexpected token, expected "," (1:25)"
`;

exports[`snippet: #131 [typescript] format 1`] = `
"Identifier expected. 'const' is a reserved word that cannot be used here. (1:20)
> 1 | class Foo { method(const parameter) {} }
    |                    ^
Cause: Identifier expected. 'const' is a reserved word that cannot be used here."
`;

exports[`snippet: #132 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:22)
> 1 | function foo(declare parameter) {}
    |                      ^
Cause: Unexpected token, expected "," (1:21)"
`;

exports[`snippet: #132 [typescript] format 1`] = `
"'declare' modifier cannot appear on a parameter. (1:14)
> 1 | function foo(declare parameter) {}
    |              ^^^^^^^
Cause: 'declare' modifier cannot appear on a parameter."
`;

exports[`snippet: #133 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:28)
> 1 | class Foo { method(declare parameter) {} }
    |                            ^
Cause: Unexpected token, expected "," (1:27)"
`;

exports[`snippet: #133 [typescript] format 1`] = `
"'declare' modifier cannot appear on a parameter. (1:20)
> 1 | class Foo { method(declare parameter) {} }
    |                    ^^^^^^^
Cause: 'declare' modifier cannot appear on a parameter."
`;

exports[`snippet: #134 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:22)
> 1 | function foo(default parameter) {}
    |                      ^
Cause: Unexpected token, expected "," (1:21)"
`;

exports[`snippet: #134 [typescript] format 1`] = `
"Identifier expected. 'default' is a reserved word that cannot be used here. (1:14)
> 1 | function foo(default parameter) {}
    |              ^
Cause: Identifier expected. 'default' is a reserved word that cannot be used here."
`;

exports[`snippet: #135 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:28)
> 1 | class Foo { method(default parameter) {} }
    |                            ^
Cause: Unexpected token, expected "," (1:27)"
`;

exports[`snippet: #135 [typescript] format 1`] = `
"Identifier expected. 'default' is a reserved word that cannot be used here. (1:20)
> 1 | class Foo { method(default parameter) {} }
    |                    ^
Cause: Identifier expected. 'default' is a reserved word that cannot be used here."
`;

exports[`snippet: #136 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:21)
> 1 | function foo(export parameter) {}
    |                     ^
Cause: Unexpected token, expected "," (1:20)"
`;

exports[`snippet: #136 [typescript] format 1`] = `
"'export' modifier cannot appear on a parameter. (1:14)
> 1 | function foo(export parameter) {}
    |              ^^^^^^
Cause: 'export' modifier cannot appear on a parameter."
`;

exports[`snippet: #137 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:27)
> 1 | class Foo { method(export parameter) {} }
    |                           ^
Cause: Unexpected token, expected "," (1:26)"
`;

exports[`snippet: #137 [typescript] format 1`] = `
"'export' modifier cannot appear on a parameter. (1:20)
> 1 | class Foo { method(export parameter) {} }
    |                    ^^^^^^
Cause: 'export' modifier cannot appear on a parameter."
`;

exports[`snippet: #138 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:17)
> 1 | function foo(in parameter) {}
    |                 ^
Cause: Unexpected token, expected "," (1:16)"
`;

exports[`snippet: #138 [typescript] format 1`] = `
"'in' modifier can only appear on a type parameter of a class, interface or type alias (1:14)
> 1 | function foo(in parameter) {}
    |              ^^
Cause: 'in' modifier can only appear on a type parameter of a class, interface or type alias"
`;

exports[`snippet: #139 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:23)
> 1 | class Foo { method(in parameter) {} }
    |                       ^
Cause: Unexpected token, expected "," (1:22)"
`;

exports[`snippet: #139 [typescript] format 1`] = `
"'in' modifier can only appear on a type parameter of a class, interface or type alias (1:20)
> 1 | class Foo { method(in parameter) {} }
    |                    ^^
Cause: 'in' modifier can only appear on a type parameter of a class, interface or type alias"
`;

exports[`snippet: #140 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:18)
> 1 | function foo(out parameter) {}
    |                  ^
Cause: Unexpected token, expected "," (1:17)"
`;

exports[`snippet: #140 [typescript] format 1`] = `
"'out' modifier can only appear on a type parameter of a class, interface or type alias (1:14)
> 1 | function foo(out parameter) {}
    |              ^^^
Cause: 'out' modifier can only appear on a type parameter of a class, interface or type alias"
`;

exports[`snippet: #141 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:24)
> 1 | class Foo { method(out parameter) {} }
    |                        ^
Cause: Unexpected token, expected "," (1:23)"
`;

exports[`snippet: #141 [typescript] format 1`] = `
"'out' modifier can only appear on a type parameter of a class, interface or type alias (1:20)
> 1 | class Foo { method(out parameter) {} }
    |                    ^^^
Cause: 'out' modifier can only appear on a type parameter of a class, interface or type alias"
`;

exports[`snippet: #142 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:14)
> 1 | function foo(override parameter) {}
    |              ^
Cause: A parameter property is only allowed in a constructor implementation. (1:13)"
`;

exports[`snippet: #142 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:14)
> 1 | function foo(override parameter) {}
    |              ^^^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #143 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:20)
> 1 | class Foo { method(override parameter) {} }
    |                    ^
Cause: A parameter property is only allowed in a constructor implementation. (1:19)"
`;

exports[`snippet: #143 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:20)
> 1 | class Foo { method(override parameter) {} }
    |                    ^^^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #144 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:14)
> 1 | function foo(private parameter) {}
    |              ^
Cause: A parameter property is only allowed in a constructor implementation. (1:13)"
`;

exports[`snippet: #144 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:14)
> 1 | function foo(private parameter) {}
    |              ^^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #145 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:20)
> 1 | class Foo { method(private parameter) {} }
    |                    ^
Cause: A parameter property is only allowed in a constructor implementation. (1:19)"
`;

exports[`snippet: #145 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:20)
> 1 | class Foo { method(private parameter) {} }
    |                    ^^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #146 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:14)
> 1 | function foo(protected parameter) {}
    |              ^
Cause: A parameter property is only allowed in a constructor implementation. (1:13)"
`;

exports[`snippet: #146 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:14)
> 1 | function foo(protected parameter) {}
    |              ^^^^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #147 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:20)
> 1 | class Foo { method(protected parameter) {} }
    |                    ^
Cause: A parameter property is only allowed in a constructor implementation. (1:19)"
`;

exports[`snippet: #147 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:20)
> 1 | class Foo { method(protected parameter) {} }
    |                    ^^^^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #148 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:14)
> 1 | function foo(public parameter) {}
    |              ^
Cause: A parameter property is only allowed in a constructor implementation. (1:13)"
`;

exports[`snippet: #148 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:14)
> 1 | function foo(public parameter) {}
    |              ^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #149 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:20)
> 1 | class Foo { method(public parameter) {} }
    |                    ^
Cause: A parameter property is only allowed in a constructor implementation. (1:19)"
`;

exports[`snippet: #149 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:20)
> 1 | class Foo { method(public parameter) {} }
    |                    ^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #150 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:14)
> 1 | function foo(readonly parameter) {}
    |              ^
Cause: A parameter property is only allowed in a constructor implementation. (1:13)"
`;

exports[`snippet: #150 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:14)
> 1 | function foo(readonly parameter) {}
    |              ^^^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #151 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:20)
> 1 | class Foo { method(readonly parameter) {} }
    |                    ^
Cause: A parameter property is only allowed in a constructor implementation. (1:19)"
`;

exports[`snippet: #151 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:20)
> 1 | class Foo { method(readonly parameter) {} }
    |                    ^^^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #152 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:21)
> 1 | function foo(static parameter) {}
    |                     ^
Cause: Unexpected token, expected "," (1:20)"
`;

exports[`snippet: #152 [typescript] format 1`] = `
"'static' modifier cannot appear on a parameter. (1:14)
> 1 | function foo(static parameter) {}
    |              ^^^^^^
Cause: 'static' modifier cannot appear on a parameter."
`;

exports[`snippet: #153 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:27)
> 1 | class Foo { method(static parameter) {} }
    |                           ^
Cause: Unexpected token, expected "," (1:26)"
`;

exports[`snippet: #153 [typescript] format 1`] = `
"'static' modifier cannot appear on a parameter. (1:20)
> 1 | class Foo { method(static parameter) {} }
    |                    ^^^^^^
Cause: 'static' modifier cannot appear on a parameter."
`;

exports[`snippet: #154 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:34)
> 1 | class Foo { constructor(abstract parameter) {} }
    |                                  ^
Cause: Unexpected token, expected "," (1:33)"
`;

exports[`snippet: #154 [typescript] format 1`] = `
"'abstract' modifier can only appear on a class, method, or property declaration. (1:25)
> 1 | class Foo { constructor(abstract parameter) {} }
    |                         ^^^^^^^^
Cause: 'abstract' modifier can only appear on a class, method, or property declaration."
`;

exports[`snippet: #155 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:34)
> 1 | class Foo { constructor(accessor parameter) {} }
    |                                  ^
Cause: Unexpected token, expected "," (1:33)"
`;

exports[`snippet: #155 [typescript] format 1`] = `
"'accessor' modifier can only appear on a property declaration. (1:25)
> 1 | class Foo { constructor(accessor parameter) {} }
    |                         ^^^^^^^^
Cause: 'accessor' modifier can only appear on a property declaration."
`;

exports[`snippet: #156 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:31)
> 1 | class Foo { constructor(async parameter) {} }
    |                               ^
Cause: Unexpected token, expected "," (1:30)"
`;

exports[`snippet: #156 [typescript] format 1`] = `
"'async' modifier cannot be used here. (1:25)
> 1 | class Foo { constructor(async parameter) {} }
    |                         ^^^^^
Cause: 'async' modifier cannot be used here."
`;

exports[`snippet: #157 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:31)
> 1 | class Foo { constructor(const parameter) {} }
    |                               ^
Cause: Unexpected token, expected "," (1:30)"
`;

exports[`snippet: #157 [typescript] format 1`] = `
"Identifier expected. 'const' is a reserved word that cannot be used here. (1:25)
> 1 | class Foo { constructor(const parameter) {} }
    |                         ^
Cause: Identifier expected. 'const' is a reserved word that cannot be used here."
`;

exports[`snippet: #158 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:33)
> 1 | class Foo { constructor(declare parameter) {} }
    |                                 ^
Cause: Unexpected token, expected "," (1:32)"
`;

exports[`snippet: #158 [typescript] format 1`] = `
"'declare' modifier cannot appear on a parameter. (1:25)
> 1 | class Foo { constructor(declare parameter) {} }
    |                         ^^^^^^^
Cause: 'declare' modifier cannot appear on a parameter."
`;

exports[`snippet: #159 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:33)
> 1 | class Foo { constructor(default parameter) {} }
    |                                 ^
Cause: Unexpected token, expected "," (1:32)"
`;

exports[`snippet: #159 [typescript] format 1`] = `
"Identifier expected. 'default' is a reserved word that cannot be used here. (1:25)
> 1 | class Foo { constructor(default parameter) {} }
    |                         ^
Cause: Identifier expected. 'default' is a reserved word that cannot be used here."
`;

exports[`snippet: #160 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:32)
> 1 | class Foo { constructor(export parameter) {} }
    |                                ^
Cause: Unexpected token, expected "," (1:31)"
`;

exports[`snippet: #160 [typescript] format 1`] = `
"'export' modifier cannot appear on a parameter. (1:25)
> 1 | class Foo { constructor(export parameter) {} }
    |                         ^^^^^^
Cause: 'export' modifier cannot appear on a parameter."
`;

exports[`snippet: #161 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:28)
> 1 | class Foo { constructor(in parameter) {} }
    |                            ^
Cause: Unexpected token, expected "," (1:27)"
`;

exports[`snippet: #161 [typescript] format 1`] = `
"'in' modifier can only appear on a type parameter of a class, interface or type alias (1:25)
> 1 | class Foo { constructor(in parameter) {} }
    |                         ^^
Cause: 'in' modifier can only appear on a type parameter of a class, interface or type alias"
`;

exports[`snippet: #162 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:29)
> 1 | class Foo { constructor(out parameter) {} }
    |                             ^
Cause: Unexpected token, expected "," (1:28)"
`;

exports[`snippet: #162 [typescript] format 1`] = `
"'out' modifier can only appear on a type parameter of a class, interface or type alias (1:25)
> 1 | class Foo { constructor(out parameter) {} }
    |                         ^^^
Cause: 'out' modifier can only appear on a type parameter of a class, interface or type alias"
`;

exports[`snippet: #163 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:32)
> 1 | class Foo { constructor(static parameter) {} }
    |                                ^
Cause: Unexpected token, expected "," (1:31)"
`;

exports[`snippet: #163 [typescript] format 1`] = `
"'static' modifier cannot appear on a parameter. (1:25)
> 1 | class Foo { constructor(static parameter) {} }
    |                         ^^^^^^
Cause: 'static' modifier cannot appear on a parameter."
`;

exports[`snippet: #164 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:28)
> 1 | class Foo {["constructor"](private parameter) {}}
    |                            ^
Cause: A parameter property is only allowed in a constructor implementation. (1:27)"
`;

exports[`snippet: #164 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:28)
> 1 | class Foo {["constructor"](private parameter) {}}
    |                            ^^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #165 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:28)
> 1 | class Foo {['constructor'](private parameter) {}}
    |                            ^
Cause: A parameter property is only allowed in a constructor implementation. (1:27)"
`;

exports[`snippet: #165 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:28)
> 1 | class Foo {['constructor'](private parameter) {}}
    |                            ^^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #166 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:28)
> 1 | class Foo {[\`constructor\`](private parameter) {}}
    |                            ^
Cause: A parameter property is only allowed in a constructor implementation. (1:27)"
`;

exports[`snippet: #166 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:28)
> 1 | class Foo {[\`constructor\`](private parameter) {}}
    |                            ^^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #167 [babel-ts] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:33)
> 1 | class Foo {['const' + 'ructor'](private parameter) {}}
    |                                 ^
Cause: A parameter property is only allowed in a constructor implementation. (1:32)"
`;

exports[`snippet: #167 [typescript] format 1`] = `
"A parameter property is only allowed in a constructor implementation. (1:33)
> 1 | class Foo {['const' + 'ructor'](private parameter) {}}
    |                                 ^^^^^^^
Cause: A parameter property is only allowed in a constructor implementation."
`;

exports[`snippet: #168 [babel-ts] format 1`] = `
"'abstract' modifier cannot appear on a type member. (1:13)
> 1 | type Foo = {abstract bar};
    |             ^
Cause: 'abstract' modifier cannot appear on a type member. (1:12)"
`;

exports[`snippet: #168 [typescript] format 1`] = `
"'abstract' modifier cannot appear on a type member (1:13)
> 1 | type Foo = {abstract bar};
    |             ^^^^^^^^
Cause: 'abstract' modifier cannot appear on a type member"
`;

exports[`snippet: #169 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (1:22)
> 1 | type Foo = {accessor bar};
    |                      ^
Cause: Unexpected token, expected ";" (1:21)"
`;

exports[`snippet: #169 [typescript] format 1`] = `
"'accessor' modifier cannot appear on a type member (1:13)
> 1 | type Foo = {accessor bar};
    |             ^^^^^^^^
Cause: 'accessor' modifier cannot appear on a type member"
`;

exports[`snippet: #170 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (1:19)
> 1 | type Foo = {async bar};
    |                   ^
Cause: Unexpected token, expected ";" (1:18)"
`;

exports[`snippet: #170 [typescript] format 1`] = `
"'async' modifier cannot appear on a type member (1:13)
> 1 | type Foo = {async bar};
    |             ^^^^^
Cause: 'async' modifier cannot appear on a type member"
`;

exports[`snippet: #171 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (1:19)
> 1 | type Foo = {const bar};
    |                   ^
Cause: Unexpected token, expected ";" (1:18)"
`;

exports[`snippet: #171 [typescript] format 1`] = `
"';' expected. (1:19)
> 1 | type Foo = {const bar};
    |                   ^
Cause: ';' expected."
`;

exports[`snippet: #172 [babel-ts] format 1`] = `
"'declare' modifier cannot appear on a type member. (1:13)
> 1 | type Foo = {declare bar};
    |             ^
Cause: 'declare' modifier cannot appear on a type member. (1:12)"
`;

exports[`snippet: #172 [typescript] format 1`] = `
"'declare' modifier cannot appear on a type member (1:13)
> 1 | type Foo = {declare bar};
    |             ^^^^^^^
Cause: 'declare' modifier cannot appear on a type member"
`;

exports[`snippet: #173 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (1:21)
> 1 | type Foo = {default bar};
    |                     ^
Cause: Unexpected token, expected ";" (1:20)"
`;

exports[`snippet: #173 [typescript] format 1`] = `
"';' expected. (1:21)
> 1 | type Foo = {default bar};
    |                     ^
Cause: ';' expected."
`;

exports[`snippet: #174 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (1:20)
> 1 | type Foo = {export bar};
    |                    ^
Cause: Unexpected token, expected ";" (1:19)"
`;

exports[`snippet: #174 [typescript] format 1`] = `
"'export' modifier cannot appear on a type member (1:13)
> 1 | type Foo = {export bar};
    |             ^^^^^^
Cause: 'export' modifier cannot appear on a type member"
`;

exports[`snippet: #175 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (1:16)
> 1 | type Foo = {in bar};
    |                ^
Cause: Unexpected token, expected ";" (1:15)"
`;

exports[`snippet: #175 [typescript] format 1`] = `
"'in' modifier cannot appear on a type member (1:13)
> 1 | type Foo = {in bar};
    |             ^^
Cause: 'in' modifier cannot appear on a type member"
`;

exports[`snippet: #176 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (1:17)
> 1 | type Foo = {out bar};
    |                 ^
Cause: Unexpected token, expected ";" (1:16)"
`;

exports[`snippet: #176 [typescript] format 1`] = `
"'out' modifier cannot appear on a type member (1:13)
> 1 | type Foo = {out bar};
    |             ^^^
Cause: 'out' modifier cannot appear on a type member"
`;

exports[`snippet: #177 [babel-ts] format 1`] = `
"'override' modifier cannot appear on a type member. (1:13)
> 1 | type Foo = {override bar};
    |             ^
Cause: 'override' modifier cannot appear on a type member. (1:12)"
`;

exports[`snippet: #177 [typescript] format 1`] = `
"'override' modifier cannot appear on a type member (1:13)
> 1 | type Foo = {override bar};
    |             ^^^^^^^^
Cause: 'override' modifier cannot appear on a type member"
`;

exports[`snippet: #178 [babel-ts] format 1`] = `
"'private' modifier cannot appear on a type member. (1:13)
> 1 | type Foo = {private bar};
    |             ^
Cause: 'private' modifier cannot appear on a type member. (1:12)"
`;

exports[`snippet: #178 [typescript] format 1`] = `
"'private' modifier cannot appear on a type member (1:13)
> 1 | type Foo = {private bar};
    |             ^^^^^^^
Cause: 'private' modifier cannot appear on a type member"
`;

exports[`snippet: #179 [babel-ts] format 1`] = `
"'protected' modifier cannot appear on a type member. (1:13)
> 1 | type Foo = {protected bar};
    |             ^
Cause: 'protected' modifier cannot appear on a type member. (1:12)"
`;

exports[`snippet: #179 [typescript] format 1`] = `
"'protected' modifier cannot appear on a type member (1:13)
> 1 | type Foo = {protected bar};
    |             ^^^^^^^^^
Cause: 'protected' modifier cannot appear on a type member"
`;

exports[`snippet: #180 [babel-ts] format 1`] = `
"'public' modifier cannot appear on a type member. (1:13)
> 1 | type Foo = {public bar};
    |             ^
Cause: 'public' modifier cannot appear on a type member. (1:12)"
`;

exports[`snippet: #180 [typescript] format 1`] = `
"'public' modifier cannot appear on a type member (1:13)
> 1 | type Foo = {public bar};
    |             ^^^^^^
Cause: 'public' modifier cannot appear on a type member"
`;

exports[`snippet: #181 [babel-ts] format 1`] = `
"'static' modifier cannot appear on a type member. (1:13)
> 1 | type Foo = {static bar};
    |             ^
Cause: 'static' modifier cannot appear on a type member. (1:12)"
`;

exports[`snippet: #181 [typescript] format 1`] = `
"'static' modifier cannot appear on a type member (1:13)
> 1 | type Foo = {static bar};
    |             ^^^^^^
Cause: 'static' modifier cannot appear on a type member"
`;

exports[`snippet: #182 [babel-ts] format 1`] = `
"Index signatures cannot have the 'declare' modifier. (2:3)
  1 | class Foo {
> 2 |   declare [index: string]: number
    |   ^
  3 | }
Cause: Index signatures cannot have the 'declare' modifier. (2:2)"
`;

exports[`snippet: #182 [typescript] format 1`] = `
"'declare' modifier cannot appear on an index signature (2:3)
  1 | class Foo {
> 2 |   declare [index: string]: number
    |   ^^^^^^^
  3 | }
Cause: 'declare' modifier cannot appear on an index signature"
`;
